[project]
name = "job-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "jsonpatch>=1.33",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "requests>=2.32.4",
    "ruff>=0.12.4",
    "tox>=4.28.0",
]

[tool.ruff]
line-length = 95
target-version = "py311"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
